# chpath

./: .gitignore  .gitlab-ci.yml  Main.hs  Makefile  README.md  Setup.lhs  chpath.cabal  etags.sh
doc/: chpath.docbook
profile/: chpath.sh
shell/: bashrc.sh  profile.sh
src/: Main.hs
src/CHPath/: AST.hs  Grammar.hs  Paths.hs
test/: TestMain.hs
test/CHPath/Test/: AST.hs  Paths.hs  TestHelp.hs  Tests.hs
