Name: chpath
Version: 0.0.2
Cabal-Version: >=1.8
Build-type: Simple
License: GPL-3
License-file: ""
Copyright:
Synopsis: Path Manipulation Utility
Author: Rob David <rob.j.david@googlemail.com>
Maintainer: Rob David <rob.j.david@googlemail.com>
Stability:
Homepage:
Package-url:
bug-reports:
description: .
Category:

Test-Suite chpath-tests
           Type: exitcode-stdio-1.0
           Main-is: TestMain.hs
           Build-depends:      HUnit >= 1.2 && < 1.3 , QuickCheck >=2.5.0.0 && < 2.8, base >=4.5 && < 4.8,
                               containers >= 0.4 , directory -any, filepath -any, parsec >=3.0.0.0
           buildable: True
           Hs-source-dirs: src test
           Other-modules:      CHPath.Grammar CHPath.Paths CHPath.AST
                               CHPath.Test.Paths CHPath.Test.AST CHPath.Test.Tests
                               CHPath.Test.TestHelp

Executable chpath-bin
           Main-is: Main.hs
           Build-depends:      base >=4.5 && < 4.8,
                               containers >= 0.4 , directory -any, filepath -any, parsec >=3.0.0.0
           Buildable: True
           Hs-source-dirs: src
           Other-modules: CHPath.Grammar CHPath.Paths CHPath.AST
